# DuckDB-RAG-MCP-Sample

./: .gitignore  CLAUDE.md  README.md  main.py  mise.toml  pyproject.toml  server.py
duckdb_rag/: __init__.py  database.py  model.py  utils.py
tests/: __init__.py  conftest.py  test_search_api.py  test_server_lifecycle.py  test_system_status.py
