[project]
name = "duckdb-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.2",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.11.6",
]
